syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message attrSet_toS {
    required int32 ID  = 1; // 特定属性能设置
    required int64 Val = 2;
}

message attrSet_toC {}