syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message baseSetCharacterDisplay_toS {
    repeated int32 characterIDs = 1;
}

message baseSetCharacterDisplay_toC {}