syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message bigSecretRandomLevel_toS {
    required int32 level = 1;
}

message bigSecretRandomLevel_toC {
    optional int32 levelID = 1;
}
