syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

import "cs/proto/message/bigSecretSync.proto";

message bigSecretWeaknessRefresh_toS {
    optional int32 level = 1;
}

message bigSecretWeaknessRefresh_toC {
    optional bigSecretWeakness weakness = 1;
}