syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message buyFatigue_toS {}

message buyFatigue_toC {}