syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message characterLike_toS {
    required int32  CharacterID  = 1;
    required bool   isLike       = 2;
}

message characterLike_toC {}