syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message drawCardPoolChoose_toS {
    optional int32 libID = 1;
    optional int32 poolIndex = 2;
}

message drawCardPoolChoose_toC {}