syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message equipRefine_toS {
    required uint32  equipID  = 1;
    repeated uint32  costEquips  = 2;
    required int32   position  = 3;
}

message equipRefine_toC {}