syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message fragmentChange_toS {
    optional int32  id      = 1;    // 碎片ID
    optional int32  count   = 2;    // 数量
}

message fragmentChange_toC {}