syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message heartbeat_toS {}

message heartbeat_toC {}
