syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message leaveSee_toS {}

message leaveSee_toC {
	repeated uint64 roleID = 1;
}
