syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message mailDelete_toS {
    repeated uint32 mailIDs = 1;
}

message mailDelete_toC {}