syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message mailRead_toS {
    repeated uint32 mailIDs = 1;
}

message mailRead_toC {}