syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message reputationItemConversion_toS {
    required int32 id = 1;
    required int32 count = 2;
}

message reputationItemConversion_toC {}