syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message reputationRefresh_toS {
    required int32 id = 1;
}

message reputationRefresh_toC {}