syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message talentReset_toS {}

message talentReset_toC {}