syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teachNone_toS {}

message teachNone_toC {}