syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamBattle_toS {}

message teamBattle_toC {}