syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamChangeInfo_toS {}

message teamChangeInfo_toC {}