syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";
import "cs/proto/message/team.proto";

message teamCreate_toS {
    required TeamTarget target = 1;
}

message teamCreate_toC {}
