syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamDismiss_toS {}

message teamDismiss_toC {}