syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamDismissNotify_toS {}

message teamDismissNotify_toC {}