syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";
import "cs/proto/message/team.proto";

message teamGetNearPlayer_toS {}

message teamGetNearPlayer_toC {
    repeated TeamPlayer players = 1;
}
