syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamInvitedApply_toS {}

message teamInvitedApply_toC {}