syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamInvitedApplyNotify_toS {}

message teamInvitedApplyNotify_toC {}