syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamInvitedReplyNotify_toS {}

message teamInvitedReplyNotify_toC {}