syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamJoinReply_toS {
    optional bool  agree = 1;
    optional uint64 agreeID = 2;
}

message teamJoinReply_toC {}