syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamKickPlayerNotify_toS {}

message teamKickPlayerNotify_toC {
    //optional uint32 teamID = 1; // 队伍id
}