syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamPlayerLeave_toS {}

message teamPlayerLeave_toC {}