syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamPlayerVote_toS {}

message teamPlayerVote_toC {}