syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamPlayerVoteNotify_toS {}

message teamPlayerVoteNotify_toC {}