syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamPosSync_toS {}

message teamPosSync_toC {}