syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamStatusSync_toS {}

message teamStatusSync_toC {}