syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";
import "cs/proto/message/team.proto";

message teamSync_toS {}

message teamSync_toC {
    required Team updateTeam = 1;
}
