syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message trialDungeonReward_toS {
    repeated int32 dungeonIDs = 1;
}

message trialDungeonReward_toC {}