syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message weaponBreak_toS {
    required uint32  weaponID  = 1;
}

message weaponBreak_toC {}