syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message weaponEquip_toS {
    required int32  characterID  = 1;
    required uint32 weaponID  = 2;
}

message weaponEquip_toC {}