syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message weaponLock_toS {
    required uint32  weaponID  = 1;
    required bool    isLock   = 2;
}

message weaponLock_toC {}