syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message weaponRefine_toS {
    required uint32  weaponID  = 1;
    required uint32  costWeapons  = 2;
}

message weaponRefine_toC {}