syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message worldQuestRefresh_toS {}

message worldQuestRefresh_toC {}