
package cs
import (
	"initialthree/codec/pb"
	"initialthree/protocol/cs/message"
)

func init() {
	//toS
	pb.Register("cs",&message.HeartbeatToS{},1)
	pb.Register("cs",&message.EchoToS{},2)
	pb.Register("cs",&message.AnnouncementToS{},3)
	pb.Register("cs",&message.LoginToS{},4)
	pb.Register("cs",&message.GameLoginToS{},5)
	pb.Register("cs",&message.ReconnectToS{},6)
	pb.Register("cs",&message.KickToS{},7)
	pb.Register("cs",&message.ServerListToS{},8)
	pb.Register("cs",&message.EnterMapToS{},9)
	pb.Register("cs",&message.StartAoiToS{},10)
	pb.Register("cs",&message.EnterSeeToS{},11)
	pb.Register("cs",&message.LeaveSeeToS{},12)
	pb.Register("cs",&message.MoveToS{},13)
	pb.Register("cs",&message.UpdatePosToS{},14)
	pb.Register("cs",&message.LeaveMapToS{},15)
	pb.Register("cs",&message.ServerTimeToS{},17)
	pb.Register("cs",&message.GameMasterToS{},18)
	pb.Register("cs",&message.CreateRoleToS{},101)
	pb.Register("cs",&message.AttrSyncToS{},201)
	pb.Register("cs",&message.BattleAttrSyncToS{},202)
	pb.Register("cs",&message.BaseSyncToS{},203)
	pb.Register("cs",&message.BuyFatigueToS{},204)
	pb.Register("cs",&message.AttrSetToS{},205)
	pb.Register("cs",&message.BuyGoldToS{},206)
	pb.Register("cs",&message.CharacterSyncToS{},301)
	pb.Register("cs",&message.CharacterBreakToS{},302)
	pb.Register("cs",&message.CharacterTeamPrefabSyncToS{},303)
	pb.Register("cs",&message.CharacterLevelUpToS{},305)
	pb.Register("cs",&message.CharacterTeamPrefabSetToS{},322)
	pb.Register("cs",&message.CharacterGiftToS{},327)
	pb.Register("cs",&message.CharacterLikeToS{},328)
	pb.Register("cs",&message.CharacterSkillLevelUpToS{},329)
	pb.Register("cs",&message.CharacterGeneLevelUpToS{},330)
	pb.Register("cs",&message.AssetSyncToS{},403)
	pb.Register("cs",&message.DrawCardSyncToS{},402)
	pb.Register("cs",&message.DrawCardDrawToS{},405)
	pb.Register("cs",&message.DrawCardPoolChooseToS{},404)
	pb.Register("cs",&message.DrawCardHistoryToS{},406)
	pb.Register("cs",&message.BackpackSyncToS{},501)
	pb.Register("cs",&message.BackpackUseToS{},502)
	pb.Register("cs",&message.BackpackSellToS{},503)
	pb.Register("cs",&message.BackpackRemToS{},504)
	pb.Register("cs",&message.InoutputToS{},505)
	pb.Register("cs",&message.QuestSyncToS{},601)
	pb.Register("cs",&message.QuestCompleteToS{},603)
	pb.Register("cs",&message.EquipSyncToS{},701)
	pb.Register("cs",&message.EquipEquipToS{},703)
	pb.Register("cs",&message.EquipDemountToS{},704)
	pb.Register("cs",&message.EquipStrengthenToS{},708)
	pb.Register("cs",&message.EquipDecomposeToS{},713)
	pb.Register("cs",&message.EquipLockToS{},714)
	pb.Register("cs",&message.EquipRefineToS{},715)
	pb.Register("cs",&message.TeamSyncToS{},801)
	pb.Register("cs",&message.TeamPosSyncToS{},802)
	pb.Register("cs",&message.TeamStatusSyncToS{},803)
	pb.Register("cs",&message.TeamGetNearTeamToS{},804)
	pb.Register("cs",&message.TeamGetNearPlayerToS{},805)
	pb.Register("cs",&message.TeamCreateToS{},811)
	pb.Register("cs",&message.TeamDismissToS{},812)
	pb.Register("cs",&message.TeamDismissNotifyToS{},813)
	pb.Register("cs",&message.TeamChangeInfoToS{},814)
	pb.Register("cs",&message.TeamChangeInfoNotifyToS{},815)
	pb.Register("cs",&message.TeamHeaderChangedToS{},816)
	pb.Register("cs",&message.TeamHeaderChangedNotifyToS{},817)
	pb.Register("cs",&message.TeamInvitedApplyToS{},821)
	pb.Register("cs",&message.TeamInvitedApplyNotifyToS{},822)
	pb.Register("cs",&message.TeamInvitedReplyToS{},823)
	pb.Register("cs",&message.TeamInvitedReplyNotifyToS{},824)
	pb.Register("cs",&message.TeamJoinApplyToS{},831)
	pb.Register("cs",&message.TeamJoinApplyNotifyToS{},832)
	pb.Register("cs",&message.TeamJoinReplyToS{},833)
	pb.Register("cs",&message.TeamJoinReplyNotifyToS{},834)
	pb.Register("cs",&message.TeamPlayerJoinNotifyToS{},835)
	pb.Register("cs",&message.TeamPlayerLeaveToS{},841)
	pb.Register("cs",&message.TeamPlayerLeaveNotifyToS{},842)
	pb.Register("cs",&message.TeamKickPlayerToS{},851)
	pb.Register("cs",&message.TeamKickPlayerNotifyToS{},852)
	pb.Register("cs",&message.TeamBattleToS{},861)
	pb.Register("cs",&message.TeamPlayerVoteToS{},862)
	pb.Register("cs",&message.TeamPlayerVoteNotifyToS{},863)
	pb.Register("cs",&message.MainDungeonsSyncToS{},901)
	pb.Register("cs",&message.RankGetTopListToS{},1001)
	pb.Register("cs",&message.RankGetRankToS{},1002)
	pb.Register("cs",&message.MaterialDungeonSyncToS{},1101)
	pb.Register("cs",&message.SecretRandomLevelToS{},1111)
	pb.Register("cs",&message.ScarsIngrainSyncToS{},1150)
	pb.Register("cs",&message.ScarsIngrainGetScoreAwardToS{},1151)
	pb.Register("cs",&message.ScarsIngrainTeamPrefabSetToS{},1152)
	pb.Register("cs",&message.ScarsIngrainSaveScoreToS{},1153)
	pb.Register("cs",&message.TrialDungeonSyncToS{},1210)
	pb.Register("cs",&message.TrialStageRewardToS{},1211)
	pb.Register("cs",&message.TrialDungeonRewardToS{},1212)
	pb.Register("cs",&message.LevelFightToS{},1301)
	pb.Register("cs",&message.LevelFightEndToS{},1302)
	pb.Register("cs",&message.RewardQuestSyncToS{},1401)
	pb.Register("cs",&message.RewardQuestAcceptToS{},1402)
	pb.Register("cs",&message.RewardQuestCompleteToS{},1403)
	pb.Register("cs",&message.RewardQuestRefreshToS{},1404)
	pb.Register("cs",&message.BattleResurrectToS{},1501)
	pb.Register("cs",&message.FragmentChangeToS{},1601)
	pb.Register("cs",&message.WeaponSyncToS{},1701)
	pb.Register("cs",&message.WeaponEquipToS{},1703)
	pb.Register("cs",&message.WeaponStrengthenToS{},1708)
	pb.Register("cs",&message.WeaponBreakToS{},1709)
	pb.Register("cs",&message.WeaponRefineToS{},1710)
	pb.Register("cs",&message.WeaponLockToS{},1711)
	pb.Register("cs",&message.WeaponDecomposeToS{},1713)
	pb.Register("cs",&message.BaseSetSignatureToS{},1801)
	pb.Register("cs",&message.BaseSetBirthdayToS{},1802)
	pb.Register("cs",&message.BaseSetNameToS{},1803)
	pb.Register("cs",&message.BaseSetCharacterDisplayToS{},1804)
	pb.Register("cs",&message.BaseSetPortraitFrameCardToS{},1805)
	pb.Register("cs",&message.BaseSetSexToS{},1806)
	pb.Register("cs",&message.TeachNoneToS{},1901)
	pb.Register("cs",&message.ShopSyncToS{},2001)
	pb.Register("cs",&message.ShopBuyToS{},2002)
	pb.Register("cs",&message.ShopRefreshToS{},2003)
	pb.Register("cs",&message.ShopPayToS{},2004)
	pb.Register("cs",&message.WorldQuestSyncToS{},2101)
	pb.Register("cs",&message.WorldQuestRefreshToS{},2102)
	pb.Register("cs",&message.ReputationSyncToS{},2104)
	pb.Register("cs",&message.ReputationItemConversionToS{},2105)
	pb.Register("cs",&message.ReputationRefreshToS{},2106)
	pb.Register("cs",&message.ChatMessageSendToS{},2201)
	pb.Register("cs",&message.ChatMessageSyncToS{},2202)
	pb.Register("cs",&message.QueryRoleInfoToS{},2301)
	pb.Register("cs",&message.MailSyncToS{},2401)
	pb.Register("cs",&message.MailReadToS{},2402)
	pb.Register("cs",&message.MailDeleteToS{},2403)
	pb.Register("cs",&message.SignSyncToS{},2501)
	pb.Register("cs",&message.SignInToS{},2502)
	pb.Register("cs",&message.BigSecretSyncToS{},2601)
	pb.Register("cs",&message.BigSecretCompetitionSyncToS{},2602)
	pb.Register("cs",&message.BigSecretWeaknessToS{},2603)
	pb.Register("cs",&message.BigSecretWeaknessRefreshToS{},2604)
	pb.Register("cs",&message.BigSecretBlessingLvUpToS{},2605)
	pb.Register("cs",&message.BigSecretRandomLevelToS{},2606)
	pb.Register("cs",&message.TalentSyncToS{},2701)
	pb.Register("cs",&message.TalentLevelUpToS{},2702)
	pb.Register("cs",&message.TalentResetToS{},2703)

	//toC
	pb.Register("sc",&message.HeartbeatToC{},1)
	pb.Register("sc",&message.EchoToC{},2)
	pb.Register("sc",&message.AnnouncementToC{},3)
	pb.Register("sc",&message.LoginToC{},4)
	pb.Register("sc",&message.GameLoginToC{},5)
	pb.Register("sc",&message.ReconnectToC{},6)
	pb.Register("sc",&message.KickToC{},7)
	pb.Register("sc",&message.ServerListToC{},8)
	pb.Register("sc",&message.EnterMapToC{},9)
	pb.Register("sc",&message.StartAoiToC{},10)
	pb.Register("sc",&message.EnterSeeToC{},11)
	pb.Register("sc",&message.LeaveSeeToC{},12)
	pb.Register("sc",&message.MoveToC{},13)
	pb.Register("sc",&message.UpdatePosToC{},14)
	pb.Register("sc",&message.LeaveMapToC{},15)
	pb.Register("sc",&message.ServerTimeToC{},17)
	pb.Register("sc",&message.GameMasterToC{},18)
	pb.Register("sc",&message.CreateRoleToC{},101)
	pb.Register("sc",&message.AttrSyncToC{},201)
	pb.Register("sc",&message.BattleAttrSyncToC{},202)
	pb.Register("sc",&message.BaseSyncToC{},203)
	pb.Register("sc",&message.BuyFatigueToC{},204)
	pb.Register("sc",&message.AttrSetToC{},205)
	pb.Register("sc",&message.BuyGoldToC{},206)
	pb.Register("sc",&message.CharacterSyncToC{},301)
	pb.Register("sc",&message.CharacterBreakToC{},302)
	pb.Register("sc",&message.CharacterTeamPrefabSyncToC{},303)
	pb.Register("sc",&message.CharacterLevelUpToC{},305)
	pb.Register("sc",&message.CharacterTeamPrefabSetToC{},322)
	pb.Register("sc",&message.CharacterGiftToC{},327)
	pb.Register("sc",&message.CharacterLikeToC{},328)
	pb.Register("sc",&message.CharacterSkillLevelUpToC{},329)
	pb.Register("sc",&message.CharacterGeneLevelUpToC{},330)
	pb.Register("sc",&message.AssetSyncToC{},403)
	pb.Register("sc",&message.DrawCardSyncToC{},402)
	pb.Register("sc",&message.DrawCardDrawToC{},405)
	pb.Register("sc",&message.DrawCardPoolChooseToC{},404)
	pb.Register("sc",&message.DrawCardHistoryToC{},406)
	pb.Register("sc",&message.BackpackSyncToC{},501)
	pb.Register("sc",&message.BackpackUseToC{},502)
	pb.Register("sc",&message.BackpackSellToC{},503)
	pb.Register("sc",&message.BackpackRemToC{},504)
	pb.Register("sc",&message.InoutputToC{},505)
	pb.Register("sc",&message.QuestSyncToC{},601)
	pb.Register("sc",&message.QuestCompleteToC{},603)
	pb.Register("sc",&message.EquipSyncToC{},701)
	pb.Register("sc",&message.EquipEquipToC{},703)
	pb.Register("sc",&message.EquipDemountToC{},704)
	pb.Register("sc",&message.EquipStrengthenToC{},708)
	pb.Register("sc",&message.EquipDecomposeToC{},713)
	pb.Register("sc",&message.EquipLockToC{},714)
	pb.Register("sc",&message.EquipRefineToC{},715)
	pb.Register("sc",&message.TeamSyncToC{},801)
	pb.Register("sc",&message.TeamPosSyncToC{},802)
	pb.Register("sc",&message.TeamStatusSyncToC{},803)
	pb.Register("sc",&message.TeamGetNearTeamToC{},804)
	pb.Register("sc",&message.TeamGetNearPlayerToC{},805)
	pb.Register("sc",&message.TeamCreateToC{},811)
	pb.Register("sc",&message.TeamDismissToC{},812)
	pb.Register("sc",&message.TeamDismissNotifyToC{},813)
	pb.Register("sc",&message.TeamChangeInfoToC{},814)
	pb.Register("sc",&message.TeamChangeInfoNotifyToC{},815)
	pb.Register("sc",&message.TeamHeaderChangedToC{},816)
	pb.Register("sc",&message.TeamHeaderChangedNotifyToC{},817)
	pb.Register("sc",&message.TeamInvitedApplyToC{},821)
	pb.Register("sc",&message.TeamInvitedApplyNotifyToC{},822)
	pb.Register("sc",&message.TeamInvitedReplyToC{},823)
	pb.Register("sc",&message.TeamInvitedReplyNotifyToC{},824)
	pb.Register("sc",&message.TeamJoinApplyToC{},831)
	pb.Register("sc",&message.TeamJoinApplyNotifyToC{},832)
	pb.Register("sc",&message.TeamJoinReplyToC{},833)
	pb.Register("sc",&message.TeamJoinReplyNotifyToC{},834)
	pb.Register("sc",&message.TeamPlayerJoinNotifyToC{},835)
	pb.Register("sc",&message.TeamPlayerLeaveToC{},841)
	pb.Register("sc",&message.TeamPlayerLeaveNotifyToC{},842)
	pb.Register("sc",&message.TeamKickPlayerToC{},851)
	pb.Register("sc",&message.TeamKickPlayerNotifyToC{},852)
	pb.Register("sc",&message.TeamBattleToC{},861)
	pb.Register("sc",&message.TeamPlayerVoteToC{},862)
	pb.Register("sc",&message.TeamPlayerVoteNotifyToC{},863)
	pb.Register("sc",&message.MainDungeonsSyncToC{},901)
	pb.Register("sc",&message.RankGetTopListToC{},1001)
	pb.Register("sc",&message.RankGetRankToC{},1002)
	pb.Register("sc",&message.MaterialDungeonSyncToC{},1101)
	pb.Register("sc",&message.SecretRandomLevelToC{},1111)
	pb.Register("sc",&message.ScarsIngrainSyncToC{},1150)
	pb.Register("sc",&message.ScarsIngrainGetScoreAwardToC{},1151)
	pb.Register("sc",&message.ScarsIngrainTeamPrefabSetToC{},1152)
	pb.Register("sc",&message.ScarsIngrainSaveScoreToC{},1153)
	pb.Register("sc",&message.TrialDungeonSyncToC{},1210)
	pb.Register("sc",&message.TrialStageRewardToC{},1211)
	pb.Register("sc",&message.TrialDungeonRewardToC{},1212)
	pb.Register("sc",&message.LevelFightToC{},1301)
	pb.Register("sc",&message.LevelFightEndToC{},1302)
	pb.Register("sc",&message.RewardQuestSyncToC{},1401)
	pb.Register("sc",&message.RewardQuestAcceptToC{},1402)
	pb.Register("sc",&message.RewardQuestCompleteToC{},1403)
	pb.Register("sc",&message.RewardQuestRefreshToC{},1404)
	pb.Register("sc",&message.BattleResurrectToC{},1501)
	pb.Register("sc",&message.FragmentChangeToC{},1601)
	pb.Register("sc",&message.WeaponSyncToC{},1701)
	pb.Register("sc",&message.WeaponEquipToC{},1703)
	pb.Register("sc",&message.WeaponStrengthenToC{},1708)
	pb.Register("sc",&message.WeaponBreakToC{},1709)
	pb.Register("sc",&message.WeaponRefineToC{},1710)
	pb.Register("sc",&message.WeaponLockToC{},1711)
	pb.Register("sc",&message.WeaponDecomposeToC{},1713)
	pb.Register("sc",&message.BaseSetSignatureToC{},1801)
	pb.Register("sc",&message.BaseSetBirthdayToC{},1802)
	pb.Register("sc",&message.BaseSetNameToC{},1803)
	pb.Register("sc",&message.BaseSetCharacterDisplayToC{},1804)
	pb.Register("sc",&message.BaseSetPortraitFrameCardToC{},1805)
	pb.Register("sc",&message.BaseSetSexToC{},1806)
	pb.Register("sc",&message.TeachNoneToC{},1901)
	pb.Register("sc",&message.ShopSyncToC{},2001)
	pb.Register("sc",&message.ShopBuyToC{},2002)
	pb.Register("sc",&message.ShopRefreshToC{},2003)
	pb.Register("sc",&message.ShopPayToC{},2004)
	pb.Register("sc",&message.WorldQuestSyncToC{},2101)
	pb.Register("sc",&message.WorldQuestRefreshToC{},2102)
	pb.Register("sc",&message.ReputationSyncToC{},2104)
	pb.Register("sc",&message.ReputationItemConversionToC{},2105)
	pb.Register("sc",&message.ReputationRefreshToC{},2106)
	pb.Register("sc",&message.ChatMessageSendToC{},2201)
	pb.Register("sc",&message.ChatMessageSyncToC{},2202)
	pb.Register("sc",&message.QueryRoleInfoToC{},2301)
	pb.Register("sc",&message.MailSyncToC{},2401)
	pb.Register("sc",&message.MailReadToC{},2402)
	pb.Register("sc",&message.MailDeleteToC{},2403)
	pb.Register("sc",&message.SignSyncToC{},2501)
	pb.Register("sc",&message.SignInToC{},2502)
	pb.Register("sc",&message.BigSecretSyncToC{},2601)
	pb.Register("sc",&message.BigSecretCompetitionSyncToC{},2602)
	pb.Register("sc",&message.BigSecretWeaknessToC{},2603)
	pb.Register("sc",&message.BigSecretWeaknessRefreshToC{},2604)
	pb.Register("sc",&message.BigSecretBlessingLvUpToC{},2605)
	pb.Register("sc",&message.BigSecretRandomLevelToC{},2606)
	pb.Register("sc",&message.TalentSyncToC{},2701)
	pb.Register("sc",&message.TalentLevelUpToC{},2702)
	pb.Register("sc",&message.TalentResetToC{},2703)

}
